fix text overflow on content type filter

--- a/app/assets/stylesheets/modules/search_area.styl
+++ b/app/assets/stylesheets/modules/search_area.styl
@@ -17,8 +17,6 @@
     border-color: $gray-light
     select
       padding-top: 7px
-      white-space: nowrap
-      overflow: hidden
 
 .with-filter
   .search-field
